=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk
-----------------------------------------------------------------------
2017-02-04                                                    trunk-603
Fix lp:1659577 
The DM calculation in evlog, chgbasis, and siesta_tddft is now condensed
into a subroutine compute_tddm. 

*Src/Makefile
*Src/changebasis.F90
*Src/evolg.F90
*Src/m_evolve.F90
*Src/siesta_tddft.F90
*Src/wavefunctions.F90

-----------------------------------------------------------------------
2016-06-23                                                    trunk-525
Merged 4.0-500

* Update list of contributors.
* Electric-field/slab-dipole-correction fix.
* Fix to avoid ps reparametrization in bessel case
* Remove Util/pseudo-xml
* Other minor changes in README files


-----------------------------------------------------------------------
...
...
-----------------------------------------------------------------------
2016-05-29                                                    trunk-504
Update makefile in Util/Gen-basis after ldau inclusion

Some extra modules are needed in Gen-basis

modified:
  Util/Gen-basis/Makefile

-----------------------------------------------------------------------
2016-05-18                                                    trunk-503
Merged fix lp:1582978 (from rel-4.0)

-----------------------------------------------------------------------
2016-05-10                                                    trunk-502
Revise mentions to now-standalone ATOM program. Revert Tests/test.mk.

* The ATOM program is not bundled with Siesta due to licensing
  differences.  Mentions to it throughout the documentation and
  example files have been updated accordingly.

* The file Tests/test.mk has been reverted to the revno 488 version.